--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,12 +13,11 @@
                 <div class="list-group">
                     @foreach (Tache tache in categorie.Taches)
                     {
-                        <a asp-controller="Tache" asp-action="Edit" asp-route-id="@tache.Id" class="list-group-item list-group-item-action active" aria-current="true">
+                        <a asp-controller="Tache" asp-action="Edit" asp-route-id="@tache.Id" class="list-group-item list-group-item-action" aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">@tache.Name</h5>
-                                <small>@tache.projet.Name</small>
+                                <span class="badge bg-primary rounded-pill">@tache.projet.Name</span>
                             </div>
-                            <p class="mb-1">@tache.Description</p>
                             <small>@tache.DateCible</small>
                         </a>
                     }
