--- a/Views/Tache/Create.cshtml
+++ b/Views/Tache/Create.cshtml
@@ -5,9 +5,9 @@
     CategoriesList = ViewBag.CategoriesList;
     var CategoriesListItems = CategoriesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 
-    List<Projet> ProjetsList = null;
-    ProjetsList = ViewBag.ProjetsList;
-    var ProjetsListItems = ProjetsList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
+    List<Badge> BadgesList = null;
+    BadgesList = ViewBag.ProjetsList;
+    var BadgesListItems = BadgesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 }
 
 
@@ -30,13 +30,24 @@
             <div class="form-group">
                 <select asp-for="CategorieId" asp-items="CategoriesListItems"></select>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <select asp-for="ProjetId" asp-items="ProjetsListItems"></select>
+            </div> *@
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <form action="" method="post">
+                    <div class="input_fields_wrap">
+                        <button class="btn btn-primary add_field_button">Ajouter un ingredient</button>
+                        @* <input type="text" class="form-control mb-3" name="badgesList[]" placeholder="Badge"> *@
+                        <select asp-items="BadgesListItems" asp-for="Badges"></select>
+                    </div>
+                </form>
             </div>
+            <div class="col-md-4"></div>
             <div class="form-group">
-                <label asp-for="DateCreation" class="control-label"></label>
-                <input asp-for="DateCreation" class="form-control" />
-                <span asp-validation-for="DateCreation" class="text-danger"></span>
+                <label asp-for="DateDebut" class="control-label"></label>
+                <input asp-for="DateDebut" class="form-control" />
+                <span asp-validation-for="DateDebut" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateCible" class="control-label"></label>
