--- a/Views/Tache/Create.cshtml
+++ b/Views/Tache/Create.cshtml
@@ -6,7 +6,7 @@
     var CategoriesListItems = CategoriesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 
     List<Badge> BadgesList = null;
-    BadgesList = ViewBag.ProjetsList;
+    BadgesList = ViewBag.badgesList;
     var BadgesListItems = BadgesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 }
 
@@ -30,20 +30,12 @@
             <div class="form-group">
                 <select asp-for="CategorieId" asp-items="CategoriesListItems"></select>
             </div>
-            @* <div class="form-group">
-                <select asp-for="ProjetId" asp-items="ProjetsListItems"></select>
-            </div> *@
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-                <form action="" method="post">
-                    <div class="input_fields_wrap">
-                        <button class="btn btn-primary add_field_button">Ajouter un ingredient</button>
-                        @* <input type="text" class="form-control mb-3" name="badgesList[]" placeholder="Badge"> *@
-                        <select asp-items="BadgesListItems" asp-for="Badges"></select>
-                    </div>
-                </form>
+            <div class="form-group">
+                <div class="input_fields_wrap">
+                    <button class="btn btn-primary add_field_button">Ajouter un badges</button>
+                    <select asp-items="BadgesListItems" name="badges[]"></select>
+                </div>
             </div>
-            <div class="col-md-4"></div>
             <div class="form-group">
                 <label asp-for="DateDebut" class="control-label"></label>
                 <input asp-for="DateDebut" class="form-control" />
