--- a/Views/Tache/Edit.cshtml
+++ b/Views/Tache/Edit.cshtml
@@ -5,9 +5,9 @@
     CategoriesList = ViewBag.CategoriesList;
     var CategoriesListItems = CategoriesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 
-    List<Badge> ProjetsList = null;
-    ProjetsList = ViewBag.ProjetsList;
-    var ProjetsListItems = ProjetsList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
+    List<Badge> BadgesList = null;
+    BadgesList = ViewBag.badgesList;
+    var BadgesListItems = BadgesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 }
 
 
@@ -31,9 +31,16 @@
             <div class="form-group">
                 <select asp-for="CategorieId" asp-items="CategoriesListItems"></select>
             </div>
-            @* <div class="form-group">
-                <select asp-for="ProjetId" asp-items="ProjetsListItems"></select>
-            </div> *@
+            <div class="form-group">
+                <div class="input_fields_wrap">
+                    <button class="btn btn-primary add_field_button">Ajouter un badges</button>
+                    @foreach (Badge badge in Model.Badges)
+                    {
+                        <select asp-items="BadgesListItems" name="badges[]" selected="@badge.Id"></select>
+                        <div class="input-group-append"><button class="btn btn-outline-danger remove_field" type="button">Supprimer</button></div>
+                    }
+                </div>
+            </div>
             <div class="form-group">
                 <label asp-for="DateDebut" class="control-label"></label>
                 <input asp-for="DateDebut" class="form-control" />
