--- a/Views/Tache/Create.cshtml
+++ b/Views/Tache/Create.cshtml
@@ -30,10 +30,10 @@
             <div class="form-group">
                 <select asp-for="CategorieId" asp-items="CategoriesListItems"></select>
             </div>
-            <div class="form-group">
-                <div class="input_fields_wrap">
+            <div class="form-group col-md-4">
+                <div class="input_fields_wrap ">
                     <button class="btn btn-primary add_field_button">Ajouter un badges</button>
-                    <select asp-items="BadgesListItems" name="badges[]"></select>
+                    <select class="mb-3" asp-items="BadgesListItems" name="badges[]"></select>
                 </div>
             </div>
             <div class="form-group">
