--- a/Views/Tache/Edit.cshtml
+++ b/Views/Tache/Edit.cshtml
@@ -31,14 +31,15 @@
             <div class="form-group">
                 <select asp-for="CategorieId" asp-items="CategoriesListItems"></select>
             </div>
-            <div class="form-group">
-                <div class="input_fields_wrap">
+            <div class="form-group col-md-4">
+                <div class="input_fields_wrap ">
                     <button class="btn btn-primary add_field_button">Ajouter un badges</button>
-                    @foreach (Badge badge in Model.Badges)
-                    {
-                        <select asp-items="BadgesListItems" name="badges[]" selected="@badge.Id"></select>
-                        <div class="input-group-append"><button class="btn btn-outline-danger remove_field" type="button">Supprimer</button></div>
-                    }
+                    <div id="selectModel" class="input-group mb-3">
+                        <div class="input-group-append">
+                            <select asp-items="BadgesListItems" name="badges[]"></select>
+                            @* <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button> *@
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
