--- a/Views/Badge/Edit.cshtml
+++ b/Views/Badge/Edit.cshtml
@@ -1,17 +1,9 @@
 @model TodoList.Models.Badge
 
 @{
-    Layout = null;
+
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
 
 <h4>Badge</h4>
 <hr />
@@ -19,10 +11,11 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <label asp-for="Numero" class="control-label"></label>
+                <input asp-for="Numero" class="form-control" />
+                <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -40,5 +33,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-</body>
-</html>
