--- a/Views/Event/Create.cshtml
+++ b/Views/Event/Create.cshtml
@@ -1,17 +1,11 @@
 @model TodoList.Models.Event
 
 @{
-    Layout = null;
+    List<Badge> BadgesList = null;
+    BadgesList = ViewBag.badgesList;
+    var BadgesListItems = BadgesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
 
 <h4>Event</h4>
 <hr />
@@ -19,11 +13,6 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Titre" class="control-label"></label>
                 <input asp-for="Titre" class="form-control" />
@@ -44,6 +33,17 @@
                 <input asp-for="DateFin" class="form-control" />
                 <span asp-validation-for="DateFin" class="text-danger"></span>
             </div>
+            <div class="form-group col-md-4">
+                <div class="input_fields_wrap ">
+                    <button class="btn btn-primary add_field_button">Ajouter un badges</button>
+                    <div id="selectModel" class="input-group mb-3">
+                        <div class="input-group-append">
+                            <select asp-items="BadgesListItems" name="badges[]"></select>
+                            @* <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button> *@
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -54,6 +54,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
-</body>
-</html>
