--- a/Views/Tache/Edit.cshtml
+++ b/Views/Tache/Edit.cshtml
@@ -54,6 +54,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-controller="Tache" asp-action="Delete" asp-route-id="@Model.Id" >Delete</a>
             </div>
         </form>
     </div>
