--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -5,3 +5,15 @@
 <div class="container">
     <a class="btn btn-primary" asp-controller="Event" asp-action="Create">Nouvelles Event</a>
 </div>
+
+<script src="~/lib/daypilot/daypilot-all.min.js" asp-append-version="true"></script>
+
+<div id="dp"></div>
+
+<script>
+
+    const dp = new DayPilot.Month("dp");
+    dp.init();
+    dp.events.load("/api/events");
+    
+</script>
