--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -14,6 +14,6 @@
 
     const dp = new DayPilot.Month("dp");
     dp.init();
-    dp.events.load("/api/events");
+    dp.events.load("/api/Events");
     
 </script>
