--- a/Views/Tache/Edit.cshtml
+++ b/Views/Tache/Edit.cshtml
@@ -40,6 +40,14 @@
                             @* <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button> *@
                         </div>
                     </div>
+                    @foreach (Badge badge in @Model.Badges)
+                    {
+
+                        <div class="input-group-append">
+                            <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
+                            <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button>
+                        </div>
+                    }
                 </div>
             </div>
             <div class="form-group">
@@ -63,3 +71,20 @@
 <div>
     <a asp-controller="Home" asp-action="Index">Back to List</a>
 </div>
+
+@section scripts {
+    <script type="text/javascript">
+        var test = "@Html.Raw(Model.Badges[1].Name)";
+
+        var test2 = "@Html.Raw(Model.Badges.Select(x => x.Name))"
+        alert(test2);
+
+        const selectors = document.getElementsByClassName("badgesSelector");
+        for (let selector in selectors)
+        {
+            const options = selectors[selector].getElementsByTagName("option");
+        }
+        
+        
+    </script>
+}
