--- a/Views/Tache/Edit.cshtml
+++ b/Views/Tache/Edit.cshtml
@@ -34,18 +34,23 @@
             <div class="form-group col-md-4">
                 <div class="input_fields_wrap ">
                     <button class="btn btn-primary add_field_button">Ajouter un badges</button>
-                    <div id="selectModel" class="input-group mb-3">
-                        <div class="input-group-append">
-                            <select asp-items="BadgesListItems" name="badges[]"></select>
-                            @* <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button> *@
-                        </div>
-                    </div>
                     @foreach (Badge badge in @Model.Badges)
                     {
-                        <div class="input-group-append">
-                            <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
-                            <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button>
-                        </div>
+                        @if (badge ==  @Model.Badges.First())
+                        {
+                            <div id="selectModel" class="input-group mb-3">
+                                <div class="input-group-append">
+                                    <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="input-group-append">
+                                <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
+                                <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button>
+                            </div>
+                        }
                     }
                 </div>
             </div>
@@ -73,24 +78,7 @@
 
 @section scripts {
     <script type="text/javascript">
-        var count = @Model.Badges.Count();
         var badgesString = '@String.Concat(Model.Badges.Select( b => b.Id + ";" ))';
-        const badges = badgesString.split(";");
-        const selectors = document.getElementsByClassName("badgesSelector");
-        for (let selector in selectors)
-        {
-            @* alert(selectors[selector]);
-            alert(badges[selector]); *@
-            const options = selectors[selector].getElementsByTagName("option");
-            for ( let option of options )
-            {
-                let value = option.getAttribute("value");
-                if ( value == badges[selector])
-                {
-                    option.setAttribute("selected", "selected");
-                }
-            }
-        }
-        
+        UpdateBadges(badgesString)
     </script>
 }
