--- a/Views/Note/Create.cshtml
+++ b/Views/Note/Create.cshtml
@@ -1,17 +1,11 @@
 @model TodoList.Models.Note
 
 @{
-    Layout = null;
+    List<Badge> BadgesList = null;
+    BadgesList = ViewBag.badgesList;
+    var BadgesListItems = BadgesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
 
 <h4>Note</h4>
 <hr />
@@ -20,19 +14,24 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Titre" class="control-label"></label>
                 <input asp-for="Titre" class="form-control" />
                 <span asp-validation-for="Titre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control" cols="80" rows="10"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group col-md-4">
+                <div class="input_fields_wrap ">
+                    <button class="btn btn-primary add_field_button">Ajouter un badges</button>
+                    <div id="selectModel" class="input-group mb-3">
+                        <div class="input-group-append">
+                            <select asp-items="BadgesListItems" name="badges[]"></select>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
@@ -50,5 +49,4 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-</body>
-</html>
+
