--- a/Views/Note/Edit.cshtml
+++ b/Views/Note/Edit.cshtml
@@ -1,17 +1,10 @@
 @model TodoList.Models.Note
 
 @{
-    Layout = null;
+    List<Badge> BadgesList = null;
+    BadgesList = ViewBag.badgesList;
+    var BadgesListItems = BadgesList.Select(item => new SelectListItem() { Text = item.Name, Value = item.Id.ToString() }).ToList();
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
 
 <h4>Note</h4>
 <hr />
@@ -19,11 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Titre" class="control-label"></label>
                 <input asp-for="Titre" class="form-control" />
@@ -31,8 +20,31 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control" cols="80" rows="10"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group col-md-4">
+                <div class="input_fields_wrap ">
+                    <button class="btn btn-primary add_field_button">Ajouter un badges</button>
+                    @foreach (Badge badge in @Model.Badges)
+                    {
+                        @if (badge ==  @Model.Badges.First())
+                        {
+                            <div id="selectModel" class="input-group mb-3">
+                                <div class="input-group-append">
+                                    <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="input-group-append">
+                                <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
+                                <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button>
+                            </div>
+                        }
+                    }
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
@@ -50,5 +62,9 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-</body>
-</html>
+@section scripts {
+    <script type="text/javascript">
+        var badgesString = '@String.Concat(Model.Badges.Select( b => b.Id + ";" ))';
+        UpdateBadges(badgesString)
+    </script>
+}
