--- a/Views/Tache/Edit.cshtml
+++ b/Views/Tache/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control" cols="80" rows="10"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -66,6 +66,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-controller="Event" asp-action="FromTache" asp-route-id="@Model.Id" >Créer un Event</a>
                 <a class="btn btn-primary" asp-controller="Tache" asp-action="Delete" asp-route-id="@Model.Id" >Delete</a>
             </div>
         </form>
@@ -73,7 +74,7 @@
 </div>
 
 <div>
-    <a asp-controller="Home" asp-action="Index">Back to List</a>
+    <a asp-controller="Tache" asp-action="Index">Back to List</a>
 </div>
 
 @section scripts {
