--- a/Views/Event/Create.cshtml
+++ b/Views/Event/Create.cshtml
@@ -36,12 +36,41 @@
             <div class="form-group col-md-4">
                 <div class="input_fields_wrap ">
                     <button class="btn btn-primary add_field_button">Ajouter un badges</button>
-                    <div id="selectModel" class="input-group mb-3">
-                        <div class="input-group-append">
-                            <select asp-items="BadgesListItems" name="badges[]"></select>
-                            @* <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button> *@
+                    @if ( @Model.Badges != null )
+                    {
+                        @foreach (Badge badge in @Model.Badges)
+                        {
+                            @if (badge ==  @Model.Badges.First())
+                            {
+                                <div id="selectModel" class="input-group mb-3">
+                                    <div class="input-group-append">
+                                        <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
+                                    </div>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="input-group-append">
+                                    <select class="badgesSelector"asp-items="BadgesListItems" name="badges[]"></select>
+                                    <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button>
+                                </div>
+                            }
+                        }
+                    }
+                    else
+                    {
+                        <div class="form-group col-md-4">
+                            <div class="input_fields_wrap ">
+                                <button class="btn btn-primary add_field_button">Ajouter un badges</button>
+                                <div id="selectModel" class="input-group mb-3">
+                                    <div class="input-group-append">
+                                        <select asp-items="BadgesListItems" name="badges[]"></select>
+                                        @* <button class="btn btn-outline-danger remove_field" type="button">Supprimer</button> *@
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    }
                 </div>
             </div>
             <div class="form-group">
@@ -54,3 +83,10 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section scripts {
+    <script type="text/javascript">
+        var badgesString = '@if ( Model.Badges != null ) {String.Concat(Model.Badges.Select( b => b.Id + ";" ));}';
+        UpdateBadges(badgesString)
+    </script>
+}
